--- a/store/Gemfile
+++ b/store/Gemfile
@@ -41,3 +41,6 @@ gem 'jquery-rails'
 gem 'therubyracer'
 gem 'less-rails'
 gem 'twitter-bootstrap-rails'
+
+# spread results across pages
+gem 'will_paginate', '~> 3.0'
